data/derived/sp14/progs/unify/prog3414.ml.out
Characters 63-64:
  let fixpoint (f,b) = wwhile (f (if ((f b) = b) then b else b), b);;
                                                                 ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
